# nomos

./: .gitignore  CMakeLists.txt  README.md  build.sh  geniso.sh  grub.cfg  i386.cmake  runiso.sh
.devcontainer/: Dockerfile  devcontainer.json
src/kernel/: CMakeLists.txt
src/kernel/arch/i386/: flags.cmake
src/kernel/arch/i386/pc/: boot.S  crti.S  crtn.S  flags.cmake  layout.ld  prelude.c  vga.c  vga.h
src/kernel/arch/i386/pc/cpu/: gdt.S  gdt.c  gdt.h  idt.c  idt.h  isr.S  isr.c  paging.S  paging.h
src/kernel/arch/i386/pc/drivers/: paging.S  t.txt  tty.c  vga.c
src/kernel/include/kernel/: font.h  paging.h  tty.h  vga.h
src/kernel/include/kernel/font/: font.h  univga.h
src/kernel/kernel/: kernel.c  univga.c
src/libc/: CMakeLists.txt
src/libc/arch/i386/: flags.cmake
src/libc/include/: stdio.h  stdlib.h  string.h
src/libc/stdio/: printf.c  putchar.c  puts.c
src/libc/stdlib/: abort.c
src/libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
